fix gap in chrome

--- a/auntChristine/style/responsive.css
+++ b/auntChristine/style/responsive.css
@@ -610,7 +610,7 @@ a.button img {
 		margin-bottom: 0;
 	}
 	#menu a {
-		padding: 8px 6px;
+		padding: 10px 6px;
 		margin: 0px;
 	}
 	.article {
